--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <networknt.version>1.0.86</networknt.version>
         <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <jetty.version>12.1.1</jetty.version>
+        <glassfish.version>3.1.3</glassfish.version>
     </properties>
 
     <dependencies>
@@ -42,17 +43,38 @@
             <version>${jetty.version}</version>
         </dependency>
 
+        <!-- Jersey for JAX-RS support -->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+            <version>${glassfish.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${glassfish.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>${glassfish.version}</version>
+        </dependency>
+
         <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -87,6 +109,7 @@
             <artifactId>log4j-api</artifactId>
             <version>2.20.0</version>
         </dependency>
+        
     </dependencies>
 
     <build>
